Add gallery images. Add desktop nav items. styling changes

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                         </tr>
                         <tr>
                             <th scope="row">Sunday</th>
-                            <td>CLOSED</td>
+                            <td><strong>CLOSED</strong></td>
                         </tr>
                     </tbody>
                 </table>
