--- a/gallery.html
+++ b/gallery.html
@@ -50,33 +50,33 @@
         <section class="gallery-feature">
             <h2 class="section-heading-padding">Feature</h2>
             <img src="images/dog-grooming.jpg">
-            <p>Short description</p>
-            <a href="#" class="btn">BOOK</a>
+            <div class="feature-text">
+                <p>A short description of this weeks featured amazing pet grooming</p>
+                <a href="booking.html" class="btn">BOOK</a>
+            </div>
         </section>
 
         <section class="happy-customers">
-            <h3 class="section-heading-padding">Happy Customers</h3>
-            <!-- pexels.com -->
+            <h2 class="section-heading-padding">Happy Customers</h2>
+            <!-- Royalty-free images from pexels.com -->
             <article class="gallery-grid">
                 <img src="images/gallery1.jpg">
                 <img src="images/gallery2.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-                <img src="images/dog-grooming.jpg">
-            </article>
-
-            <a href="#" class="btn">BOOK</a>
+                <img src="images/gallery3.jpg">
+                <img src="images/gallery4.jpg">
+                <img src="images/gallery5.jpg">
+                <img src="images/gallery6.jpg">
+                <img src="images/gallery7.jpg">
+                <img src="images/gallery8.jpg">
+                <img src="images/gallery9.jpg">
+                <img src="images/gallery10.jpg">
+                <img src="images/gallery11.jpg">
+                <img src="images/gallery12.jpg">
+                <img src="images/gallery13.jpg">
+                <img src="images/gallery14.jpg">
+                <img src="images/gallery15.jpg">
+                <img src="images/gallery16.jpg">
+            </article>            
         </section>
 
         <section class="testimonials">
@@ -85,7 +85,7 @@
             <article class="testimonial-cards">
                 <div class="test-card">
                     <div class="test-customer">
-                        <img src="images/facebook.png">
+                        <img src="images/person.png">
                         <p>John Smith</p>
                     </div>
                     <div class="test-text">
@@ -96,7 +96,18 @@
 
                 <div class="test-card">
                     <div class="test-customer">
-                        <img src="images/facebook.png">
+                        <img src="images/person.png">
+                        <p>John Smith</p>
+                    </div>
+                    <div class="test-text">
+                        <p>A short testimonial from a happy customer</p>
+                        <p>★★★★☆ 4/5</p>
+                    </div>
+                </div>
+
+                <div class="test-card extra-test-card">
+                    <div class="test-customer">
+                        <img src="images/person.png">
                         <p>John Smith</p>
                     </div>
                     <div class="test-text">
