--- a/index.html
+++ b/index.html
@@ -30,21 +30,37 @@
         </button>
 
         <div class="brand">
-          <img src="images/facebook.png" alt="Brand logo">
+          <img src="images/snazzy-logo.png" alt="Brand logo">
           <span class="brand-name">Snazzy Paws Grooming</span>
         </div>
       </div>
 
+
+
       <a href="tel:0800123456" class="mob-call-btn" aria-label="Call us">
         📞
       </a>
+
+      <div class="tabdesk-nav">
+        <ul>
+          <li ><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="booking.html">Booking</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
+
+
   </header>
 
   <main class="main-container main-desk main-mobile">
 
     <section class="home-hero">
-      <img src="images/dog-grooming.jpg" alt="Dog being groomed at Snazzy Paws">
+      <div class="hero-content">
+        <h2>Welcome to Snazzy Paws!</h2>
+      </div>
     </section>
 
     <section class="home-our-services">
@@ -66,7 +82,7 @@
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
-              <a href="#" class="btn">Book</a>
+              <a href="booking.html" class="btn">Book</a>
             </div>
           </div>
         </article>
@@ -78,7 +94,7 @@
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
-              <a href="#" class="btn">Book</a>
+              <a href="booking.html" class="btn">Book</a>
             </div>
           </div>
         </article>
@@ -90,7 +106,7 @@
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
-              <a href="#" class="btn">Book</a>
+              <a href="booking.html" class="btn">Book</a>
             </div>
           </div>
         </article>
@@ -111,13 +127,17 @@
       <div class="footer-right">
         <h3 class="section-heading-padding">Follow Us</h3>
         <div class="footer-socials">
-          <!--- freepik.com -->
+          <!--- Icon images from freepik.com -->
           <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
           <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
           <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
           <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
         </div>
       </div>
+    </div>
+
+    <div class="desk-footer">
+      
     </div>
 
     <div class="footer-hours">
