--- a/services.html
+++ b/services.html
@@ -41,27 +41,51 @@
         </div>
     </header>
 
-    <main>
-        <section class="special-offer">
+    <main class="main-container">
+        <section class="services-heading">
             <h1 class="section-heading-padding">Services</h1>
             <p>Welcome to our services</p>
+        </section>
+
+        <section class="special-offer">
             <img src="images/dog-grooming.jpg">
-            <a href="#" class="btn">BOOK NOW!</a>
+            <a href="booking.html" class="btn">SPECIAL OFFER - BOOK NOW!</a>
         </section>
 
         <section class="our-services section-heading-padding">
             <article class="service-card">
                 <h3>Service #1</h3>
                 <img src="images/dog-grooming.jpg">
-                <p>Service description text</p>
-                <p>Price</p>
-                <a href="#" class="btn">BOOK</a>
-            </article>
-            <article class="service-card">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
+                    necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
+                    eum vitae facere, impedit ad.</p>
+                <div class="service-price">
+                    <p>Price $80 - $120</p>
+                    <a href="booking.html" class="btn">BOOK</a>
+                </div>
 
             </article>
             <article class="service-card">
-
+                <h3>Service #2</h3>
+                <img src="images/dog-grooming.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
+                    necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
+                    eum vitae facere, impedit ad.</p>
+                <div class="service-price">
+                    <p>Price $80 - $120</p>
+                    <a href="booking.html" class="btn">BOOK</a>
+                </div>
+            </article>
+            <article class="service-card">
+                <h3>Service #3</h3>
+                <img src="images/dog-grooming.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
+                    necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
+                    eum vitae facere, impedit ad.</p>
+                <div class="service-price">
+                    <p>Price $80 - $120</p>
+                    <a href="booking.html" class="btn">BOOK</a>
+                </div>
             </article>
         </section>
 
@@ -94,8 +118,10 @@
         <section class="other-services">
             <h3 class="section-heading-padding">Other Services</h3>
             <img src="images/dog-grooming.jpg">
-            <p>A description of this service</p>
-            <a href="#" class="btn">BOOK</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab nostrum nam officia error officiis, facilis
+                suscipit quisquam unde a sed rerum tempore inventore impedit nobis dolorum cumque debitis sapiente
+                possimus.</p>
+            <a href="booking.html" class="btn">BOOK NOW</a>
         </section>
 
     </main>
