--- a/booking.html
+++ b/booking.html
@@ -59,8 +59,11 @@
         <section class="booking-form section-heading-padding">
             <h3>Make a booking</h3>
             <form>
+                <div>
                 <label for="owner">Owner’s Name</label>
+                </div>
                 <input id="owner" type="text">
+                
 
                 <label for="email">Email Address</label>
                 <input id="email" type="email">
@@ -82,6 +85,12 @@
                         <li>Something</li>
                     </ul>
                 </details>
+
+                <label for="date">Appointment date</label>
+                <input type="date" min="2026-01-29" max="2026-12-31" id="date" name="date">
+
+                <label for="time">Appointment time</label>
+                <input type="time" step="900" min="09:00" max="17:00" id="time" name="time">
 
                 <button type="submit">Submit</button>
             </form>
