Added to desktop css

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
 
 <body>
     <header class="site-header">
-
         <nav class="mobile-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -30,7 +29,7 @@
                 </button>
 
                 <div class="brand">
-                    <img src="images/facebook.png" alt="Brand logo">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
                     <span class="brand-name">Snazzy Paws Grooming</span>
                 </div>
             </div>
@@ -38,6 +37,16 @@
             <a href="tel:0800123456" class="mob-call-btn" aria-label="Call us">
                 📞
             </a>
+
+            <div class="tabdesk-nav">
+                <ul>
+                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -46,7 +55,6 @@
             <h2 class="section-heading-padding">Contact Us</h2>
 
             <div class="map-container">
-
                 <iframe src="https://www.google.com/maps?q=-36.8485,174.7633&z=14&output=embed"
                     aria-label="Map showing Snazzy Paws Grooming location" allowfullscreen loading="lazy"
                     title="Map showing our store location">
@@ -108,12 +116,47 @@
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
                 <div class="footer-socials">
-                    <!--- freepik.com -->
+                    <!--- Icon images from freepik.com -->
                     <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
                     <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
                     <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
                     <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
                 </div>
+            </div>
+        </div>
+
+        <div class="desk-footer">
+            <div class="branding">
+                <div class="branding-content">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
+                    <h3>Snazzy Paws</h3>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, consequatur qui a tenetur eveniet
+                    excepturi omnis nemo nesciunt necessitatibus totam cum atque consequuntur sit ipsum laboriosam
+                    nobis, ex fuga
+                    facilis?</p>
+
+            </div>
+            <div class="quick-links">
+                <h3 class="section-heading-padding">Quick Links</h3>
+                <ul>
+                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+
+            </div>
+            <div class="follow">
+                <h3 class="section-heading-padding">Follow Us</h3>
+                <div class="follow-images">
+                    <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
+                    <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
+                    <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
+                </div>
+
             </div>
         </div>
 
