--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,6 @@
 
 <body>
     <header class="site-header">
-
         <nav class="mobile-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -29,7 +28,7 @@
                 </button>
 
                 <div class="brand">
-                    <img src="images/facebook.png" alt="Brand logo">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
                     <span class="brand-name">Snazzy Paws Grooming</span>
                 </div>
             </div>
@@ -37,6 +36,16 @@
             <a href="tel:0800123456" class="mob-call-btn" aria-label="Call us">
                 📞
             </a>
+
+            <div class="tabdesk-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html" aria-current="page">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -76,7 +85,7 @@
                 <img src="images/gallery14.jpg">
                 <img src="images/gallery15.jpg">
                 <img src="images/gallery16.jpg">
-            </article>            
+            </article>
         </section>
 
         <section class="testimonials">
@@ -125,19 +134,54 @@
         <div class="footer-wrapper">
             <div class="footer-left">
                 <h3 class="section-heading-padding">Snazzy Paws</h3>
-                <p>123 Fake Street, AUCKLAND</p>
-                <p>(021) 323-846-999</p>
-                <p>snazzypaws@gmail.com</p>
+                <p>Store Location</p>
+                <p>Phone</p>
+                <p>Email</p>
             </div>
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
                 <div class="footer-socials">
-                    <!--- freepik.com -->
+                    <!--- Icon images from freepik.com -->
                     <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
                     <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
                     <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
                     <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
                 </div>
+            </div>
+        </div>
+
+        <div class="desk-footer">
+            <div class="branding">
+                <div class="branding-content">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
+                    <h3>Snazzy Paws</h3>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, consequatur qui a tenetur eveniet
+                    excepturi omnis nemo nesciunt necessitatibus totam cum atque consequuntur sit ipsum laboriosam
+                    nobis, ex fuga
+                    facilis?</p>
+
+            </div>
+            <div class="quick-links">
+                <h3 class="section-heading-padding">Quick Links</h3>
+                <ul>
+                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+
+            </div>
+            <div class="follow">
+                <h3 class="section-heading-padding">Follow Us</h3>
+                <div class="follow-images">
+                    <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
+                    <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
+                    <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
+                </div>
+
             </div>
         </div>
 
