--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
 
   <header class="site-header">
-
     <nav class="mobile-menu">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -35,15 +34,13 @@
         </div>
       </div>
 
-
-
       <a href="tel:0800123456" class="mob-call-btn" aria-label="Call us">
         📞
       </a>
 
       <div class="tabdesk-nav">
         <ul>
-          <li ><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="index.html" aria-current="page">Home</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="booking.html">Booking</a></li>
@@ -51,8 +48,6 @@
         </ul>
       </div>
     </div>
-
-
   </header>
 
   <main class="main-container main-desk main-mobile">
@@ -137,7 +132,37 @@
     </div>
 
     <div class="desk-footer">
-      
+      <div class="branding">
+        <div class="branding-content">
+          <img src="images/snazzy-logo.png" alt="Brand logo">
+          <h3>Snazzy Paws</h3>
+        </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, consequatur qui a tenetur eveniet
+          excepturi omnis nemo nesciunt necessitatibus totam cum atque consequuntur sit ipsum laboriosam nobis, ex fuga
+          facilis?</p>
+
+      </div>
+      <div class="quick-links">
+        <h3 class="section-heading-padding">Quick Links</h3>
+        <ul>
+          <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="booking.html">Booking</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+      </div>
+      <div class="follow">
+        <h3 class="section-heading-padding">Follow Us</h3>
+        <div class="follow-images">
+          <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
+          <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
+          <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
+          <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
+        </div>
+
+      </div>
     </div>
 
     <div class="footer-hours">
