--- a/services.html
+++ b/services.html
@@ -12,7 +12,6 @@
 <body>
 
     <header class="site-header">
-
         <nav class="mobile-menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -30,7 +29,7 @@
                 </button>
 
                 <div class="brand">
-                    <img src="images/facebook.png" alt="Brand logo">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
                     <span class="brand-name">Snazzy Paws Grooming</span>
                 </div>
             </div>
@@ -38,6 +37,16 @@
             <a href="tel:0800123456" class="mob-call-btn" aria-label="Call us">
                 📞
             </a>
+
+            <div class="tabdesk-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html" aria-current="page">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -65,6 +74,7 @@
                 </div>
 
             </article>
+
             <article class="service-card">
                 <h3>Service #2</h3>
                 <img src="images/dog-grooming.jpg">
@@ -76,6 +86,7 @@
                     <a href="booking.html" class="btn">BOOK</a>
                 </div>
             </article>
+
             <article class="service-card">
                 <h3>Service #3</h3>
                 <img src="images/dog-grooming.jpg">
@@ -87,6 +98,115 @@
                     <a href="booking.html" class="btn">BOOK</a>
                 </div>
             </article>
+        </section>
+
+        <section class="service-categories">
+
+            <h2 class="section-heading-padding">Category #1</h3>
+
+                <div class="category-cards">
+                    <article class="service-card">
+                        <h3>Service #1</h3>
+                        <img src="images/dog-grooming.jpg">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                            corporis,
+                            beatae
+                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                            dolores
+                            autem
+                            eum vitae facere, impedit ad.</p>
+                        <div class="service-price">
+                            <p>Price $80 - $120</p>
+                            <a href="booking.html" class="btn">BOOK</a>
+                        </div>
+                    </article>
+
+                    <article class="service-card">
+                        <h3>Service #2</h3>
+                        <img src="images/dog-grooming.jpg">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                            corporis,
+                            beatae
+                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                            dolores
+                            autem
+                            eum vitae facere, impedit ad.</p>
+                        <div class="service-price">
+                            <p>Price $80 - $120</p>
+                            <a href="booking.html" class="btn">BOOK</a>
+                        </div>
+                    </article>
+
+                    <article class="service-card">
+                        <h3>Service #3</h3>
+                        <img src="images/dog-grooming.jpg">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                            corporis,
+                            beatae
+                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                            dolores
+                            autem
+                            eum vitae facere, impedit ad.</p>
+                        <div class="service-price">
+                            <p>Price $80 - $120</p>
+                            <a href="booking.html" class="btn">BOOK</a>
+                        </div>
+                    </article>
+
+                    <article class="service-card">
+                        <h3>Service #4</h3>
+                        <img src="images/dog-grooming.jpg">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                            corporis,
+                            beatae
+                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                            dolores
+                            autem
+                            eum vitae facere, impedit ad.</p>
+                        <div class="service-price">
+                            <p>Price $80 - $120</p>
+                            <a href="booking.html" class="btn">BOOK</a>
+                        </div>
+                    </article>
+                </div>
+
+                <h2 class="section-heading-padding">Category #2</h3>
+
+                    <div class="category-cards">
+
+
+                        <article class="service-card">
+                            <h3>Service #5</h3>
+                            <img src="images/dog-grooming.jpg">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                                corporis,
+                                beatae
+                                necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                                dolores
+                                autem
+                                eum vitae facere, impedit ad.</p>
+                            <div class="service-price">
+                                <p>Price $80 - $120</p>
+                                <a href="booking.html" class="btn">BOOK</a>
+                            </div>
+                        </article>
+
+                        <article class="service-card">
+                            <h3>Service #6</h3>
+                            <img src="images/dog-grooming.jpg">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
+                                corporis,
+                                beatae
+                                necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
+                                dolores
+                                autem
+                                eum vitae facere, impedit ad.</p>
+                            <div class="service-price">
+                                <p>Price $80 - $120</p>
+                                <a href="booking.html" class="btn">BOOK</a>
+                            </div>
+                        </article>
+                    </div>
         </section>
 
         <section class="services-table">
@@ -137,12 +257,47 @@
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
                 <div class="footer-socials">
-                    <!--- freepik.com -->
+                    <!--- Icon images from freepik.com -->
                     <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
                     <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
                     <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
                     <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
                 </div>
+            </div>
+        </div>
+
+        <div class="desk-footer">
+            <div class="branding">
+                <div class="branding-content">
+                    <img src="images/snazzy-logo.png" alt="Brand logo">
+                    <h3>Snazzy Paws</h3>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, consequatur qui a tenetur eveniet
+                    excepturi omnis nemo nesciunt necessitatibus totam cum atque consequuntur sit ipsum laboriosam
+                    nobis, ex fuga
+                    facilis?</p>
+
+            </div>
+            <div class="quick-links">
+                <h3 class="section-heading-padding">Quick Links</h3>
+                <ul>
+                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+
+            </div>
+            <div class="follow">
+                <h3 class="section-heading-padding">Follow Us</h3>
+                <div class="follow-images">
+                    <a href="#"><img src="images/facebook.png" alt="Facebook" aria-label="Facebook"></a>
+                    <a href="#"><img src="images/instagram.png" alt="Instagram" aria-label="Instagram"></a>
+                    <a href="#"><img src="images/twitter.png" alt="Twitter" aria-label="Twitter"></a>
+                    <a href="#"><img src="images/youtube.png" alt="YouTube" aria-label="Youtube"></a>
+                </div>
+
             </div>
         </div>
 
