Image compression. Responsive styling. Clean up

--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snazzy Paws Grooming | Home</title>
-    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    
+    <link rel="stylesheet" href="css/styles-min.css">
+    <title>Snazzy Paws Grooming | Gallery</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 
         <section class="gallery-heading">
             <h1 class="section-heading-padding">Our Work</h1>
-            <p>General description of our work</p>
+            <p>A description of our work here at Snazzy Paws</p>
         </section>
 
         <section class="gallery-feature">
@@ -66,8 +66,9 @@
         </section>
 
         <section class="happy-customers">
-            <h2 class="section-heading-padding">Happy Customers</h2>
-            <!-- Royalty-free images from pexels.com -->
+            <h2 class="section-heading-padding">Gallery of happy pooches</h2>
+            <!-- Royalty-free images from pexels.com 
+             Gallery images compressed by https://tinyjpg.com/ -->
             <article class="gallery-grid">
                 <img src="images/gallery1.jpg">
                 <img src="images/gallery2.jpg">
@@ -106,7 +107,7 @@
                 <div class="test-card">
                     <div class="test-customer">
                         <img src="images/person.png">
-                        <p>John Smith</p>
+                        <p>David Jones</p>
                     </div>
                     <div class="test-text">
                         <p>A short testimonial from a happy customer</p>
@@ -117,7 +118,7 @@
                 <div class="test-card extra-test-card">
                     <div class="test-customer">
                         <img src="images/person.png">
-                        <p>John Smith</p>
+                        <p>Sheryl Duffy</p>
                     </div>
                     <div class="test-text">
                         <p>A short testimonial from a happy customer</p>
@@ -125,7 +126,6 @@
                     </div>
                 </div>
             </article>
-
         </section>
 
     </main>
@@ -134,9 +134,9 @@
         <div class="footer-wrapper">
             <div class="footer-left">
                 <h3 class="section-heading-padding">Snazzy Paws</h3>
-                <p>Store Location</p>
-                <p>Phone</p>
-                <p>Email</p>
+                <p>14 Islington St. HAMILTON</p>
+                <p>(021) 434-9876</p>
+                <p>snazzypaws@gmail.com</p>
             </div>
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
