--- a/booking.html
+++ b/booking.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    
+    <link rel="stylesheet" href="css/styles-min.css">
     <title>Snazzy Paws Grooming | Booking</title>
 </head>
 
@@ -41,10 +40,10 @@
 
             <div class="tabdesk-nav">
                 <ul>
-                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="booking.html" aria-current="page">Booking</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -57,10 +56,10 @@
             <div class="book-heading-wrapper">
                 <div class="book-heading-left">
                     <h1>Booking</h1>
-                    <p>Blurb about bookings page</p>
+                    <p>A short blurb about booking a service with our grooming specialists</p>
                 </div>
                 <div class="book-heading-right">
-                    <img src="images/dog-grooming.jpg" alt="Dog being groomed at Snazzy Paws">
+                    <img src="images/booking.jpg" alt="Dog being groomed at Snazzy Paws">
                 </div>
             </div>
         </section>
@@ -109,9 +108,9 @@
         <div class="footer-wrapper">
             <div class="footer-left">
                 <h3 class="section-heading-padding">Snazzy Paws</h3>
-                <p>Store Location</p>
-                <p>Phone</p>
-                <p>Email</p>
+                <p>14 Islington St. HAMILTON</p>
+                <p>(021) 434-9876</p>
+                <p>snazzypaws@gmail.com</p>
             </div>
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
