--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    
+    <link rel="stylesheet" href="css/styles-min.css">
     <title>Snazzy Paws Grooming | Contact</title>
 </head>
 
@@ -40,11 +39,11 @@
 
             <div class="tabdesk-nav">
                 <ul>
-                    <li><a href="index.html" aria-current="page">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="booking.html">Booking</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" aria-current="page">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +54,7 @@
             <h2 class="section-heading-padding">Contact Us</h2>
 
             <div class="map-container">
-                <iframe src="https://www.google.com/maps?q=-36.8485,174.7633&z=14&output=embed"
+                <iframe src="https://www.google.com/maps?q=14+Islington+St,+Hamilton,+New+Zealand&z=14&output=embed"
                     aria-label="Map showing Snazzy Paws Grooming location" allowfullscreen loading="lazy"
                     title="Map showing our store location">
                 </iframe>
@@ -63,7 +62,7 @@
 
             <article class="contact-info">
                 <h3 class="section-heading-padding">Store Location</h3>
-                <p>123 Fake Street, AUCKLAND</p>
+                <p>14 Islington Street, HAMILTON</p>
                 <h3 class="section-heading-padding">Shop Hours</h3>
                 <table>
                     <tbody>
@@ -109,9 +108,9 @@
         <div class="footer-wrapper">
             <div class="footer-left">
                 <h3 class="section-heading-padding">Snazzy Paws</h3>
-                <p>Store Location</p>
-                <p>Phone</p>
-                <p>Email</p>
+                <p>14 Islington St. HAMILTON</p>
+                <p>(021) 434-9876</p>
+                <p>snazzypaws@gmail.com</p>
             </div>
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
