--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-  <link rel="stylesheet" href="css/styles.css">
+  
+  <link rel="stylesheet" href="css/styles-min.css">
   <title>Snazzy Paws Grooming | Home</title>
 </head>
 
@@ -71,9 +71,9 @@
       <div class="home-card-list">
 
         <article class="home-service-card">
-          <img src="images/dog-grooming.jpg" alt="Dog being groomed at Snazzy Paws">
+          <img src="images/service1.jpg" alt="Dog being groomed at Snazzy Paws">
           <div class="service-content">
-            <h3>Service One</h3>
+            <h3>Service Name #1</h3>
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
@@ -83,9 +83,9 @@
         </article>
 
         <article class="home-service-card">
-          <img src="images/dog-grooming.jpg" alt="Dog being groomed at Snazzy Paws">
+          <img src="images/service2.jpg" alt="Dog being groomed at Snazzy Paws">
           <div class="service-content">
-            <h3>Service One</h3>
+            <h3>Service Name #2</h3>
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
@@ -95,9 +95,9 @@
         </article>
 
         <article class="home-service-card">
-          <img src="images/dog-grooming.jpg" alt="Dog being groomed at Snazzy Paws">
+          <img src="images/service5.jpg" alt="Dog being groomed at Snazzy Paws">
           <div class="service-content">
-            <h3>Service One</h3>
+            <h3>Service Name #3</h3>
             <p>A short description of what the service includes and why it’s awesome.</p>
             <div class="service-price-book">
               <span class="price-range">$80 - $120</span>
@@ -105,7 +105,6 @@
             </div>
           </div>
         </article>
-
       </div>
     </section>
 
@@ -115,9 +114,9 @@
     <div class="footer-wrapper">
       <div class="footer-left">
         <h3 class="section-heading-padding">Snazzy Paws</h3>
-        <p>Store Location</p>
-        <p>Phone</p>
-        <p>Email</p>
+        <p>14 Islington St. HAMILTON</p>
+        <p>(021) 434-9876</p>
+        <p>snazzypaws@gmail.com</p>
       </div>
       <div class="footer-right">
         <h3 class="section-heading-padding">Follow Us</h3>
