--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-    <link rel="stylesheet" href="css/styles.css">
+    
+    <link rel="stylesheet" href="css/styles-min.css">
     <title>Snazzy Paws Grooming | Services</title>
 </head>
 
@@ -53,18 +53,18 @@
     <main class="main-container">
         <section class="services-heading">
             <h1 class="section-heading-padding">Services</h1>
-            <p>Welcome to our services</p>
+            <p>Welcome to our services section</p>
         </section>
 
         <section class="special-offer">
-            <img src="images/dog-grooming.jpg">
-            <a href="booking.html" class="btn">SPECIAL OFFER - BOOK NOW!</a>
+            <img src="images/special-offer.jpg">
+            <a href="booking.html" class="btn">FREE TOY OFFER - BOOK NOW!</a>
         </section>
 
         <section class="our-services section-heading-padding">
             <article class="service-card">
                 <h3>Service #1</h3>
-                <img src="images/dog-grooming.jpg">
+                <img src="images/service1.jpg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -77,7 +77,7 @@
 
             <article class="service-card">
                 <h3>Service #2</h3>
-                <img src="images/dog-grooming.jpg">
+                <img src="images/service2.jpg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -89,7 +89,7 @@
 
             <article class="service-card">
                 <h3>Service #3</h3>
-                <img src="images/dog-grooming.jpg">
+                <img src="images/service3.jpg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -101,20 +101,16 @@
         </section>
 
         <section class="service-categories">
-
             <h2 class="section-heading-padding">Category #1</h3>
 
                 <div class="category-cards">
                     <article class="service-card">
                         <h3>Service #1</h3>
-                        <img src="images/dog-grooming.jpg">
+                        <img src="images/service1.jpg">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
-                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                            dolores
-                            autem
-                            eum vitae facere, impedit ad.</p>
+                            necessitatibus</p>
                         <div class="service-price">
                             <p>Price $80 - $120</p>
                             <a href="booking.html" class="btn">BOOK</a>
@@ -123,14 +119,11 @@
 
                     <article class="service-card">
                         <h3>Service #2</h3>
-                        <img src="images/dog-grooming.jpg">
+                        <img src="images/service2.jpg">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
-                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                            dolores
-                            autem
-                            eum vitae facere, impedit ad.</p>
+                            necessitatibus</p>
                         <div class="service-price">
                             <p>Price $80 - $120</p>
                             <a href="booking.html" class="btn">BOOK</a>
@@ -139,14 +132,11 @@
 
                     <article class="service-card">
                         <h3>Service #3</h3>
-                        <img src="images/dog-grooming.jpg">
+                        <img src="images/service3.jpg">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
-                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                            dolores
-                            autem
-                            eum vitae facere, impedit ad.</p>
+                            necessitatibus</p>
                         <div class="service-price">
                             <p>Price $80 - $120</p>
                             <a href="booking.html" class="btn">BOOK</a>
@@ -155,14 +145,11 @@
 
                     <article class="service-card">
                         <h3>Service #4</h3>
-                        <img src="images/dog-grooming.jpg">
+                        <img src="images/service4.jpg">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
-                            necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                            dolores
-                            autem
-                            eum vitae facere, impedit ad.</p>
+                            necessitatibus</p>
                         <div class="service-price">
                             <p>Price $80 - $120</p>
                             <a href="booking.html" class="btn">BOOK</a>
@@ -173,18 +160,13 @@
                 <h2 class="section-heading-padding">Category #2</h3>
 
                     <div class="category-cards">
-
-
                         <article class="service-card">
                             <h3>Service #5</h3>
-                            <img src="images/dog-grooming.jpg">
+                            <img src="images/service5.jpg">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                                 corporis,
                                 beatae
-                                necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                                dolores
-                                autem
-                                eum vitae facere, impedit ad.</p>
+                                necessitatibus</p>
                             <div class="service-price">
                                 <p>Price $80 - $120</p>
                                 <a href="booking.html" class="btn">BOOK</a>
@@ -197,10 +179,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                                 corporis,
                                 beatae
-                                necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores
-                                dolores
-                                autem
-                                eum vitae facere, impedit ad.</p>
+                                necessitatibus</p>
                             <div class="service-price">
                                 <p>Price $80 - $120</p>
                                 <a href="booking.html" class="btn">BOOK</a>
@@ -237,7 +216,7 @@
 
         <section class="other-services">
             <h3 class="section-heading-padding">Other Services</h3>
-            <img src="images/dog-grooming.jpg">
+            <img src="images/other-service.jpg">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab nostrum nam officia error officiis, facilis
                 suscipit quisquam unde a sed rerum tempore inventore impedit nobis dolorum cumque debitis sapiente
                 possimus.</p>
@@ -250,9 +229,9 @@
         <div class="footer-wrapper">
             <div class="footer-left">
                 <h3 class="section-heading-padding">Snazzy Paws</h3>
-                <p>Store Location</p>
-                <p>Phone</p>
-                <p>Email</p>
+                <p>14 Islington St. HAMILTON</p>
+                <p>(021) 434-9876</p>
+                <p>snazzypaws@gmail.com</p>
             </div>
             <div class="footer-right">
                 <h3 class="section-heading-padding">Follow Us</h3>
