Fixed HTML validation errors. minimized css

--- a/contact.html
+++ b/contact.html
@@ -87,16 +87,16 @@
             <h3 class="section-heading-padding">Contact Form</h3>
             <form>
                 <label for="contact-name" class="visually-hidden">Name</label>
-                <input id="name" type="text" placeholder="Name">
+                <input id="contact-name" type="text" placeholder="Name">
 
                 <label for="contact-email" class="visually-hidden">Email</label>
                 <input id="contact-email" type="email" placeholder="Email Address">
 
                 <label for="contact-phone" class="visually-hidden">Phone</label>
-                <input id="phone" type="tel" placeholder="Phone Number">
+                <input id="contact-phone" type="tel" placeholder="Phone Number">
 
                 <label for="contact-comment" class="visually-hidden">Comment</label>
-                <textarea id="comment" rows="4" placeholder="Comment ..."></textarea>
+                <textarea id="contact-comment" rows="4" placeholder="Comment ..."></textarea>
 
                 <button type="submit">Submit</button>
             </form>
