--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
 
         <section class="gallery-feature">
             <h2 class="section-heading-padding">Feature</h2>
-            <img src="images/dog-grooming.jpg">
+            <img src="images/dog-grooming.jpg" alt="Image of dog being groomed">
             <div class="feature-text">
                 <p>A short description of this weeks featured amazing pet grooming</p>
                 <a href="booking.html" class="btn">BOOK</a>
@@ -70,22 +70,23 @@
             <!-- Royalty-free images from pexels.com 
              Gallery images compressed by https://tinyjpg.com/ -->
             <article class="gallery-grid">
-                <img src="images/gallery1.jpg">
-                <img src="images/gallery2.jpg">
-                <img src="images/gallery3.jpg">
-                <img src="images/gallery4.jpg">
-                <img src="images/gallery5.jpg">
-                <img src="images/gallery6.jpg">
-                <img src="images/gallery7.jpg">
-                <img src="images/gallery8.jpg">
-                <img src="images/gallery9.jpg">
-                <img src="images/gallery10.jpg">
-                <img src="images/gallery11.jpg">
-                <img src="images/gallery12.jpg">
-                <img src="images/gallery13.jpg">
-                <img src="images/gallery14.jpg">
-                <img src="images/gallery15.jpg">
-                <img src="images/gallery16.jpg">
+                <h2 class="visually-hidden">Image Gallery grid</h2>
+                <img src="images/gallery1.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery2.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery3.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery4.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery5.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery6.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery7.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery8.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery9.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery10.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery11.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery12.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery13.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery14.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery15.jpg" alt="Image of dog being groomed">
+                <img src="images/gallery16.jpg" alt="Image of dog being groomed">
             </article>
         </section>
 
@@ -93,9 +94,10 @@
             <h3 class="section-heading-padding">Testimonials</h3>
 
             <article class="testimonial-cards">
+                <h2 class="visually-hidden">Testimonial Cards</h2>
                 <div class="test-card">
                     <div class="test-customer">
-                        <img src="images/person.png">
+                        <img src="images/person.png" alt="Person logo">
                         <p>John Smith</p>
                     </div>
                     <div class="test-text">
@@ -106,7 +108,7 @@
 
                 <div class="test-card">
                     <div class="test-customer">
-                        <img src="images/person.png">
+                        <img src="images/person.png" alt="Person logo">
                         <p>David Jones</p>
                     </div>
                     <div class="test-text">
@@ -117,7 +119,7 @@
 
                 <div class="test-card extra-test-card">
                     <div class="test-customer">
-                        <img src="images/person.png">
+                        <img src="images/person.png" alt="Person logo">
                         <p>Sheryl Duffy</p>
                     </div>
                     <div class="test-text">
