--- a/services.html
+++ b/services.html
@@ -57,14 +57,14 @@
         </section>
 
         <section class="special-offer">
-            <img src="images/special-offer.jpg">
+            <img src="images/special-offer.jpg" alt="Special offer promotion">
             <a href="booking.html" class="btn">FREE TOY OFFER - BOOK NOW!</a>
         </section>
 
         <section class="our-services section-heading-padding">
             <article class="service-card">
                 <h3>Service #1</h3>
-                <img src="images/service1.jpg">
+                <img src="images/service1.jpg" alt="Image of dog being groomed">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -77,7 +77,7 @@
 
             <article class="service-card">
                 <h3>Service #2</h3>
-                <img src="images/service2.jpg">
+                <img src="images/service2.jpg" alt="Image of dog being groomed">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -89,7 +89,7 @@
 
             <article class="service-card">
                 <h3>Service #3</h3>
-                <img src="images/service3.jpg">
+                <img src="images/service3.jpg" alt="Image of dog being groomed">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur corporis, beatae
                     necessitatibus perspiciatis tempora nihil delectus deserunt, quasi vel aliquam maiores dolores autem
                     eum vitae facere, impedit ad.</p>
@@ -101,12 +101,12 @@
         </section>
 
         <section class="service-categories">
-            <h2 class="section-heading-padding">Category #1</h3>
+            <h2 class="section-heading-padding">Category #1</h2>
 
                 <div class="category-cards">
                     <article class="service-card">
                         <h3>Service #1</h3>
-                        <img src="images/service1.jpg">
+                        <img src="images/service1.jpg" alt="Image of dog being groomed">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
@@ -119,7 +119,7 @@
 
                     <article class="service-card">
                         <h3>Service #2</h3>
-                        <img src="images/service2.jpg">
+                        <img src="images/service2.jpg" alt="Image of dog being groomed">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
@@ -132,7 +132,7 @@
 
                     <article class="service-card">
                         <h3>Service #3</h3>
-                        <img src="images/service3.jpg">
+                        <img src="images/service3.jpg" alt="Image of dog being groomed">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
@@ -145,7 +145,7 @@
 
                     <article class="service-card">
                         <h3>Service #4</h3>
-                        <img src="images/service4.jpg">
+                        <img src="images/service4.jpg" alt="Image of dog being groomed">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                             corporis,
                             beatae
@@ -157,12 +157,12 @@
                     </article>
                 </div>
 
-                <h2 class="section-heading-padding">Category #2</h3>
+                <h2 class="section-heading-padding">Category #2</h2>
 
                     <div class="category-cards">
                         <article class="service-card">
                             <h3>Service #5</h3>
-                            <img src="images/service5.jpg">
+                            <img src="images/service5.jpg" alt="Image of dog being groomed">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                                 corporis,
                                 beatae
@@ -175,7 +175,7 @@
 
                         <article class="service-card">
                             <h3>Service #6</h3>
-                            <img src="images/dog-grooming.jpg">
+                            <img src="images/dog-grooming.jpg" alt="Image of dog being groomed">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sapiente consectetur
                                 corporis,
                                 beatae
@@ -216,7 +216,7 @@
 
         <section class="other-services">
             <h3 class="section-heading-padding">Other Services</h3>
-            <img src="images/other-service.jpg">
+            <img src="images/other-service.jpg" alt="Image of dog being groomed">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab nostrum nam officia error officiis, facilis
                 suscipit quisquam unde a sed rerum tempore inventore impedit nobis dolorum cumque debitis sapiente
                 possimus.</p>
