--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="stylesheet" href="css/styles-min.css">
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
   <title>Snazzy Paws Grooming | Home</title>
 </head>
 
